Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     align-items: center;
     height: 100vh;
     background-color: bisque;
-    text-align: center;
     margin: 0;
 }
 
@@ -17,7 +16,7 @@ body {
     color: white;
     font-size: 30px;
   }
-  
+
 /* Container positioning */
 .container {
     position: relative;
